<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="357dp"
    android:layout_height="44.44dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/app_logo" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/qr_code"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_qr_code_scanner_24" />

    <FrameLayout
        android:layout_width="24dp"
        android:layout_height="25.51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/notification_bell"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_notifications_none_24" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/notification_ellipse" />

    </FrameLayout>


    <ImageView
        android:layout_width="24dp"
        android:layout_height="18.89dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/vector_list"
        android:scaleType="fitXY"
        android:src="@drawable/vector_list" />


</LinearLayout>